add extended octave range sounds and sync stop, player configs